# super-marketplace

./: .env.dev  .env.local  Makefile  README.md  api-documentation.md  backend-ingress.yml  backend.Dockerfile  dev-configmap.yml  docker-compose.yml  elk-manifest.yml  elk.docker-compose.yml  ingress.yml  kibana-ingress.yml  openapi.json  pyproject.toml
alembic/: env.py
alembic/versions/: 027df44a5eea_user_profile.py  0dc434e50453_cart_change.py  493df293aabb_init.py  675422d91d5e_orders_change.py  a2c9467b37e9_rebase.py  ae3fa658d921_cart_change.py  b5422d6f82ce_cart.py  b7a16f453347_unique_product.py  bb93e3b6b229_checkout_unique.py  d29e80eb1ac7_cart_change.py  d8024540f19f_checkout_flow.py  fa9a6df464fa_orders_change.py
app/: Dockerfile  dependency.py  exception.py  main.py  settings.py
app/cart/: handlers.py  models.py  repository.py  schema.py  service.py
app/cart/checkout/: handlers.py  models.py  rabbitmq_worker.py  repository.py  schema.py  service.py
app/infrastructure/database/: accessor.py
app/orders/: handlers.py  models.py  repository.py  schema.py  service.py
app/products/: handlers.py  models.py  schema.py  service.py
app/products/repository/: __init__.py  product.py
app/sales/: models.py  repository.py  schema.py  service.py
app/users/auth/: handlers.py  service.py
app/users/user_profile/: handlers.py  models.py  repository.py
logstash/pipeline/: logstash.conf
tests/: conftest.py
tests/fixtures/auth/: auth_service.py
tests/fixtures/users/: user_model.py  user_repository.py
tests/unit/auth/: test_auth_service.py
utils/autoimport/: __init__.py  get_all_models.py
workers/: Dockerfile  orders.Dockerfile  pyproject.toml  sales.Dockerfile  sales_rabbitmq_worker.py  workers_dependency.py  workers_settings.py
workers/orders/: orders_rabbitmq_worker.py
workers/sales/: sales_rabbitmq_worker.py
workers/utils/publisher_rq/: __init__.py  rabbitmq_worker.py
(+1 files in other folders)
