[tool.poetry]
name = "super-marketplace"
version = "0.1.0"
description = ""
authors = ["nesterov-art <nesterov-art@yandex-team.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aio-pika = "^9.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
